--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "know-your-deps",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Picks a random dependency from your project and splains it to you.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
