--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "know-your-deps",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Picks a random dependency from your project and splains it to you.",
   "main": "index.js",
+  "bin": {
+    "know-your-deps": "./index.js"
+  },
   "scripts": {
     "start": "node index.js"
   },
